Improved EPG Parsing